# myqueue

./: .gitignore  README.md  build_macos.sh  build_windows.ps1  main.js  package-lock.json  package.json  requirements.txt  run.bat  task_explorer.html  task_explorer_native.py
.github/workflows/: build-macos.yml  build-windows.yml
legacy/: task_explorer.html
scripts/: export_taskory_for_ai_board.py  install_macos_launcher_wrapper.sh  sync_taskory_to_ai_board.py  verify_taskory_ai.py  verify_taskory_sync.py
task-explorer-tauri/: .gitignore  README.md  package-lock.json  package.json
task-explorer-tauri/src/: index.html
task-explorer-tauri/src-tauri/: Cargo.toml  tauri.conf.json
