[package]
name = "task-explorer-tauri"
version = "1.0.0"
description = "Taskory Tauri desktop app"
authors = ["local"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
